fix: partially align left and right content

--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -57,6 +57,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        margin-top: 45px;
 
         button:first-child {
           width: 85%;
